[workspace]
members = [
    "rustdivert-examples",
]

[package]
name = "rustdivert"
description = "rust-native interface to WinDivert"
version = "0.0.1"
edition = "2024"
rust-version = "1.94"

[dependencies]
log = "0.4.18"
ntapi = "0.4.3"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Kernel",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry"
]
