[package]
name = "rustdivert-examples"
version = "0.0.1"
edition = "2024"
rust-version = "1.94"

[dependencies]
log = "0.4.18"
flexi_logger = "0.31.8"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
windivert = "0.6.0"
rand = "0.10.0"
etherparse = "0.19.0"
rustdivert = { path = ".." }